@@ -3,6 +3,7 @@ namespace Qyoto {
 	using System;
 	using System.Collections;
 	using System.Text;
+	using System.Reflection;
 
 	public partial class Qt : MarshalByRefObject {
 		public static QApplication qApp = null;
@@ -14,7 +15,32 @@ namespace Qyoto {
 		public static string SLOT(string slot) {
 			return "1" + slot;
 		}
-	
+
+		public static void Q_INIT_RESOURCE(string name) {
+			string className = "QInitResources_" + name + "__dest_class__";
+			// This unfortunately doesn't work because it only looks in the
+			// current assembly. Is it possible to force a search of all
+			// assemblies?
+			Type klass = Type.GetType(className);
+			if (klass == null) {
+				Console.Error.WriteLine("Q_INIT_RESOURCE: resource '{0}' is missing", name);
+				return;
+			}
+			MethodInfo initResource = klass.GetMethod("QInitResources_" + name);
+			initResource.Invoke(null, null);		
+		}
+
+		public static void Q_CLEANUP_RESOURCE(string name) {
+			string className = "QInitResources_" + name + "__dest_class__";
+			Type klass = Type.GetType(className);
+			if (klass == null) {
+				Console.Error.WriteLine("Q_CLEANUP_RESOURCE: resource '{0}' is missing", name);
+				return;
+			}
+			MethodInfo cleanupResource = klass.GetMethod("QCleanupResources_" + name);
+			cleanupResource.Invoke(null, null);
+		}
+
 		// These should really use generic types like the C++ originals, but
 		// it doesn't seem to work with C#
 		public static int QMin(int a, int b) { if (a < b) return a; return b; }
