@@ -514,8 +514,6 @@ namespace Qyoto {
 			return StaticQApplication().KeyboardInputDirection();
 		}
 		public static new int Exec() {
-			/*int ret = StaticQApplication().Exec();
-			Qyoto.DeleteQApp();*/
 			return StaticQApplication().Exec();
 		}
 		public static void SetQuitOnLastWindowClosed(bool quit) {
