@@ -1,6 +1,8 @@
 2007-02-10  Richard Dale  <rdale@foton.es>
 
 	* Improved debug messages in SmokeInvocation.cs
+	* The csrcc tool nearly works, but Qt.Q_INIT_RESOURCE() can't find the
+	  class where the resource is.
 
 2007-02-09  Arno Rehn  <arno@arnorehn.de>
 
